@@ -92,6 +92,9 @@
     <contributor>
       <name>Niall Pemberton</name>
     </contributor>
+    <contributor>
+      <name>Sitthichai Rernglertpricha</name>
+    </contributor>
   </contributors>
 
   <dependencies>
